--- a/singolo1.css
+++ b/singolo1.css
@@ -28,19 +28,22 @@ header {
     font-size: 25px;
     font-weight: 500;
     text-align: left;
-    margin-top: 36px;
+    margin-top: 30px;
     margin-left: 40px;
     padding: 0;
     font-family: "Lato";
+    letter-spacing: -0.5px;
 }
  
 
 .nav {
-    margin-top: 45px;
+    margin-top: 42.7px;
     margin-left: 407px;
     margin-right: 13px;
     display: flex;
     font-style: inherit;
+    padding-inline-start: 31.6px;
+    letter-spacing: -0.4px;
 
 }
 
@@ -56,7 +59,7 @@ header {
 }
 
 .slider {
-    height: 600px;
+    height: 585px;
     background-color: #f06c64;
     border-bottom: 15px solid #ea676b;
     margin-bottom: 0;
@@ -95,7 +98,7 @@ header {
 }
 
 .services {
-    padding-top: 67px;
+    padding-top: 69px;
     height: 495px;
     background-color: #f2f2f2;
     border-bottom: 6px solid #fff;
@@ -131,14 +134,15 @@ h2 {
 .services-text {
     width: 940px;
     height: 57px;
-    margin-top: 32px;
-    margin-left: 42px;
-    margin-bottom: 54px;
+    margin-top: 27px;
+    margin-left: 40px;
+    margin-bottom: 49px;
     font-size: 18px;
     line-height: 30px;
     color: #767e9e;
     font-weight: 300;
     text-align: left;
+    word-spacing: -1px;
 }
 
 .services .content {
@@ -146,19 +150,32 @@ h2 {
     flex-wrap: wrap;
     justify-content: center;
     align-items: center;
-    margin-top: 50px;
+    margin-top: 48px;
+    margin-left:16px;
 }
 
 .s-element {
     display: flex;
     align-items: flex-start;
-    width: 310px;
+    height: 86px;
     color: #666d89;
-    margin-bottom: 39px;
+    margin-bottom: 37px;
+    margin-right: 20px;
 }
 
 .text {
     overflow: hidden;
-    margin: -20px 20px;
+    margin: 0;
+    margin-bottom: 20px;
+    margin-left: 20px;
 }
+.text p{
+    margin:0;
+    margin-top: 5px;
+    width: 219px;
 
+}
+.s-element .text h3 {
+    margin: 0;
+    word-spacing: 4px;
+}
