--- a/style.css
+++ b/style.css
@@ -2,14 +2,6 @@ a {
     text-decoration: none;
     color: #fff;
 }
-.active {
-    color: #f06c64;
-    font-size: 12px;
-    margin-left: 15px;
-    display: block;
-    width: 51px;
-    margin-right: 0px;
-}
  li{
     list-style: none;
     width: 66px;
@@ -18,9 +10,6 @@ body {
     font-family: "Lato";
     margin: 0;
     padding:0;
-    scroll-behavior: smooth;
-    height: 100%;
-    width: 100%;
 }
 header {
     min-height: 89px;
@@ -33,17 +22,11 @@ header {
     width: 100%;
     background-color: #2d303a;
     border-bottom: 6px solid #323746;
-    position: fixed;
-
-    overflow: hidden;
 }
 .slider-block {
     width: 100%;
     background-color: #f06c64;
     border-bottom: 15px solid #ea676b;
-
-     /* position: relative;  */
-     overflow: hidden; 
 
 }
 .wrapper {
@@ -103,79 +86,17 @@ header {
     padding-left: 52px;
 }
 
-.slider-content-1 {
-    height: 674px;
+.slider-content {
+    height: 585px;
     background-color: #f06c64;
     margin-bottom: 0;
     padding-bottom: 0;
     width: 1020px;
 }
 
-.slider-content- {
-    height: 674px;
-    background-color: #648BF0;
-    margin-bottom: 0;
-    padding-bottom: 0;
-    width: 1020px;
-}
-
-#wrapper_all {
-
-    overflow: hidden;
-}
-
-.slider__control {
-    position: absolute;
-    top: 50%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    width: 40px;
-    color: #fff;
-    text-align: center;
-    opacity: 0.5;
-    height: 50px;
-    transform: translateY(-50%);
-    background: rgba(0, 0, 0, .5);
-  }
-
-  .slider__control:hover,
-  .slider__control:focus {
-    color: #fff;
-    text-decoration: none;
-    outline: 0;
-    opacity: .9;
-  }
-
-  .slider__control_left {
-    left: 0;
-  }
-
-  .slider__control_right {
-    right: 0;
-  }
-
-  .slider__control::before {
-    content: '';
-    display: inline-block;
-    width: 20px;
-    height: 20px;
-    background: transparent no-repeat center center;
-    background-size: 100% 100%;
-  }
-
-  .slider__control_left::before {
-    background-image: url("assets/chevleft1.svg");
-  }
-
-  .slider__control_right::before {
-    background-image: url('assets/chevright1.svg');
-  }
-
-
 .chev-left {
     margin-left: 2px;
-    margin-top: 370px;
+    margin-top: 281px;
     position: absolute;
 }
 
@@ -184,20 +105,20 @@ header {
 }
 
 .phone-vertical {
-    margin-top: 142px;
+    margin-top: 53px;
     margin-left: 64px;
-
+    position: absolute;
 }
 
 .phone-horizontal {
-    margin-top: 263px;
+    margin-top: 174px;
     margin-left: 378px;
-
+    position: absolute;
 }
 
 .chev-right {
     margin-left: 917px;
-    margin-top: 370px;
+    margin-top: 281px;
 }
 
 .chev-right :hover {
@@ -291,23 +212,9 @@ h2 {
 /* PART 2 */
 
 
-  .gallery {
-    list-style: none;
 
-} 
 
-.gallery img {
-    margin-right: 10px;
-    margin-bottom: 10px;
-    flex: 1 0 20%;
 
-}
-
-.gallery img::before {
-    content: "";
-    float: left;
-    padding-top: 100%;
-}  
 
 
 .part2 {
@@ -368,7 +275,7 @@ h2 {
 }
 .menu {
     margin-top: 15px;
-    margin-bottom: 19px; 
+    margin-bottom: 19px;
 }
 .menu-all {
     /* рамка */
@@ -433,9 +340,9 @@ a{
     overflow: hidden;
 
 }
-/* .gallery img {
+.gallery img {
     margin-bottom: 20px;
-} */
+}
 .about-us {
     height: 734px;
     background-color: #f2f2f2;
@@ -506,15 +413,15 @@ a{
 .icon.facebook {
     background-image: url("assets/facebook.png");
 }
-  
+
 .icon.google-plus {
     background-image: url("assets/google+.png");
 }
-  
+
 .icon.twitter {
     background-image: url("assets/twitter.png");
 }
-  
+
 .icon.linkedin {
     background-image: url("assets/linkedin.png");
 }
@@ -677,17 +584,17 @@ footer {
     background-image: url("assets/facebook.png");
     margin-left: 10px;
 }
-  
+
 .icon.google-plus_part3 {
     background-image: url("assets/google+.png");
     margin-left: 5px;
 }
-  
+
 .icon.twitter_part3 {
     background-image: url("assets/twitter.png");
     margin-left: 5px;
 }
-  
+
 .icon.linkedin_part3 {
     background-image: url("assets/linkedin.png");
     margin-left: 5px;
@@ -714,4 +621,4 @@ footer {
     display: flex;
     padding-top: 22px;
     justify-content: space-between;
- }
+ } 
